--- a/src/JoinRoomPage/JoinRoomPage.css
+++ b/src/JoinRoomPage/JoinRoomPage.css
@@ -163,3 +163,51 @@
 .join_room_input:focus {
   border: 1px solid blue;
 }
+
+.label_modal{
+  font-size: 12px;
+}
+
+.join_room_input_copy{
+  border: 0px solid white;
+  border-bottom: 1px solid black;
+  height: 40px;
+  font-size: 18px;
+};
+
+.join_room_input_copy:focus {
+  border: 1px solid blue;
+}
+
+.copy_to_link_container {
+  width: 100%;
+}
+
+.link_url {
+  display: flex;
+  flex-direction: column;
+
+}
+.button_copy_container{
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+.button_copy {
+  border-radius: 5px;
+  padding: 8px;
+  margin-bottom: 8px;
+  background-color: white;
+}
+
+.button_copy:hover {
+  background-color: #e5e5e5;
+}
+
+.copy_to_link {
+  width: 87%;
+  display: flex;
+  padding-left: 35px;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
